fix: Fixed auto zoom on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ html, body{
     height: 100vh;
     width: 100vw;
     margin: 0;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
